updating milestone 3 + a little bit of 4 whoops

--- a/application/public/css/form.css
+++ b/application/public/css/form.css
@@ -48,3 +48,16 @@ button:active {
     margin: auto;
     padding: 40px;
 }
+
+#flash-message {
+
+    position: fixed;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%,0);
+  }
+  
+#flash-message div {
+
+text-align: center;
+}
