--- a/application/views/postimage.hbs
+++ b/application/views/postimage.hbs
@@ -9,7 +9,7 @@
 		<section>
 			• Create a post title and upload an image below • 
 		</section>
-		<form>
+		<form id = "post-image" method="POST" enctype="multipart/form-data" action='/posts/createPost'>
 			<legend> <strong> Post Information </strong> </legend>
 
 			<label for="postTitle"> Enter your post title: </label>
@@ -41,4 +41,3 @@
 		</form>
 	</div>
 </body>
-</html>
