--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -6,7 +6,7 @@
 	<header>
 		<h2> Create Your Account: </h2>
 	</header>
-	<form id="form" action="#">
+	<form id="form" method="POST" action="/users/register" enctype="application/x-www-form-urlencoded" />
 		<fieldset>
 			<legend> <strong> Account Requirements </strong> </legend>
 
@@ -51,4 +51,3 @@
         <button type="reset"> Reset </button>
 	</form>
 </body>
-</html>
