--- a/application/views/layouts/body.hbs
+++ b/application/views/layouts/body.hbs
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css"> </linkrel>
-    <link rel="stylesheet" type="text/css" href="/public/css/form.css"> </linkrel>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>{{title}}</title>
+        <link rel="stylesheet" type="text/css" href="../../public/css/bootstrap.min.css"> </linkrel>
+        <link rel="stylesheet" type="text/css" href="../../public/css/{{css}}.css"> </linkrel>
+        <script defer src="/public/js/frontend.js"></script>
+        {{!-- <script defer src="/middleware/routeprotectors.js"></script> --}}
+    </head>
     <body>
+        
+        {{log this}}
         {{> header}}
         {{{body}}}
         {{> footer}}
+        {{#if (emptyObject messages)}}
+        {{> flashmessage}}
+        {{/if}}
+
+        {{#if logged}}
+            <script>
+                let ele = document.getElementById('logout-button');
+                if (ele) {
+                    ele.onclick = (event) => {
+                        fetch('/users/logout', {
+                            method: "POST"
+                        }).then((data) => {
+                            location.replace('/');
+                        });
+                    }
+                }
+            </script>
+        {{/if}}
     </body>
 </html>
