--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -9,17 +9,18 @@
         <section>
             • Enter your login information and hit submit •
         </section>
-		<form class="input-info">
+		<form class="input-info" method="POST" action="/users/login"
+		enctype="application/x-www-form-urlencoded">
 			
 			<legend> <strong> Login Information </strong> </legend>
 
 			<label for="username"> Username: </label>
-			<input type="text" id="setUsername" name="username" placeholder="Username" required />
+			<input type="text" id="setUsername" required name="username" placeholder="Username" required />
 
 			<br />
 
 			<label for="password"> Password: </label>
-			<input type="password" id="setPassword" name="password" placeholder="Password" required />
+			<input type="password" id="setPassword" required name="password" placeholder="Password" required />
 
 			<br />
 
@@ -28,4 +29,3 @@
 		</form>
 	</div>
 </body>
-</html>
