--- a/application/views/layouts/body.hbs
+++ b/application/views/layouts/body.hbs
@@ -8,18 +8,20 @@
         <title>{{title}}</title>
         <link rel="stylesheet" type="text/css" href="../../public/css/bootstrap.min.css"> </linkrel>
         <link rel="stylesheet" type="text/css" href="../../public/css/{{css}}.css"> </linkrel>
+        {{!-- <link rel="stylesheet" type="text/css" href="../../public/css/{{css}}.css"> </linkrel> --}}
         <script defer src="/public/js/frontend.js"></script>
         {{!-- <script defer src="/middleware/routeprotectors.js"></script> --}}
     </head>
     <body>
         
-        {{log this}}
+        {{!-- {{log this}} --}}
         {{> header}}
-        {{{body}}}
-        {{> footer}}
         {{#if (emptyObject messages)}}
         {{> flashmessage}}
         {{/if}}
+        {{{body}}}
+        {{> footer}}
+        
 
         {{#if logged}}
             <script>
