--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -3,12 +3,7 @@
 </head>
 <body>
 	<div class = "center">
-		<header>
 			<h2> ~ LOGIN FORM ~ </h2>
-		</header>
-        <section>
-            • Enter your login information and hit submit •
-        </section>
 		<form class="input-info" method="POST" action="/users/login"
 		enctype="application/x-www-form-urlencoded">
 			
@@ -26,6 +21,10 @@
 
 			<button type="submit"> Submit </button>
 			<button type="reset"> Reset </button>
+
+			<br />
+			
+			<label for="username" class="register-color"> Don't have an account? <a href="/registration"> Register Here! </a></label>
 		</form>
 	</div>
 </body>
