--- a/application/views/partials/footer.hbs
+++ b/application/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer id="footer">
-    <span id="footerName">Samantha Saxton-Getty, 2021</span>
+<footer id="footer" class ="footer-tag">
+    <span id="footerName">Sami, 2021</span>
     <a id="emailLink" href="mailto: ssaxtongetty@mail.sfsu.edu"> Email Me</a>
 </footer>
