--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,10 +1,6 @@
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+<div class="grid-container" id="cardContainer">
+    {{#each results}}
+      {{> card this}}
+    {{/each}}
 
-<body>
-  <h1>Express</h1>
-  <h2>Hello world, i am {{name}}</h2>
-
-</body>
+</div>
