--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -12,9 +12,9 @@
                 <li><a href="/"><i id="home" class="nav-items anchorButtons" aria-hidden="true"></i>HOME</a></li> 
                 <li><a href="/postimage"><i id="postButton" class="nav-items anchorButtons" aria-hidden="true"></i>POST</a></li>
                 {{#if logged}}
-                <li><a href="#"><i id="logout-button" class="nav-items anchorButtons" aria-hidden="true">LOGOUT</i></a></li>
+                <li><a><i id="logout-button" class="nav-items anchorButtons" aria-hidden="true">LOGOUT</i></a></li>
                 {{else}}
-                <li><a href="/login"><i id="logout-button" class="nav-items anchorButtons" aria-hidden="true"></i>LOGIN</a></li>
+                <li><a href="/login"><i id="login-button" class="nav-items anchorButtons" aria-hidden="true">LOGIN</i></a></li>
                 {{/if}}
             </ul>
         </div>
