--- a/application/public/css/home.css
+++ b/application/public/css/home.css
@@ -102,10 +102,18 @@ ul li a:hover {
   height: 175px;
 }
 
-.footer-tag {
+.footer-name {
 
-  position: static;
-  margin-top: 0px;
+  position: absolute;
+  left: 46%;
+  text-align: center;
+  color: #50738E;
+}
+
+.link-footer {
+
+  position: absolute;
+  left: 50%;
   text-align: center;
   color: #50738E;
 }
