--- a/application/views/partials/footer.hbs
+++ b/application/views/partials/footer.hbs
@@ -1,4 +1,4 @@
 <footer id="footer" class ="footer-tag">
-    <span id="footerName">Sami, 2021</span>
-    <a id="emailLink" href="mailto: ssaxtongetty@mail.sfsu.edu"> Email Me</a>
+    <span id="footerName" class="footer-name">Sami, 2021</span>
+    <a id="emailLink" class= "link-footer" href="mailto: ssaxtongetty@mail.sfsu.edu"> Email Me</a>
 </footer>
